# vedoTk

./: .gitignore  README.md  pyproject.toml  setup.py  setup_dev.py
examples/: folder_inspection.py  liver_registration.py  mesh_cells_selection.py  mesh_points_selection.py  mesh_selection.py  visible_points.py
examples/resources/liver/: camera_parameters.json
src/: __init__.py  folder_inspection.py  mesh_selection.py  mesh_selector.py  visible_points.py
src/vedoTk/: __init__.py  folder_inspection.py  mesh_selection.py  visible_points.py
src/vedoTk/apps/: folder_inspection.py  mesh_selection.py  registration.py
src/vedoTk/utils/: mesh.py  points.py
